# architectury-versions

./: Cargo.toml
src/: architectury.rs  lib.rs  main.rs  version.rs
