[package]
name = "architectury_versions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "6.0.0-rc.1"
reqwest = { version = "0.11.10", features = ["blocking"] }
roxmltree = "0.14.1"
substring = "1.4.5"
serde_json = "1.0.79"
regex = "1.5.5"
